# DataWarehouseFacturacion

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
common/: db.py  session_manager.py
config/: app_config.py  pipeline_config.py
docs/: naming_conventions.md
dwh_facturacion/: tasks.py
dwh_facturacion/common/: connection.py  db.py  schema_initializer.py  session_manager.py
dwh_facturacion/config/: app_config.py  logger_config.py  logging_pipeline.py  pipeline_config.py  setting.py
dwh_facturacion/models/: base_model.py
dwh_facturacion/utils/: RunMode.py  db_utils.py  general_functions.py  mode_persistence.py  source_spec.py
dwh_facturacion_dbt/: dbt_project.yml
dwh_facturacion_dbt/seeds/: articulos_comercial.csv  facturas_excluidas.csv  fenix_articulos_corregidos.csv  reasignacion_comercial.csv  reasignacion_distribuidores.csv  reasignacion_grupo_vendedor.csv  reasignacion_islas_temporales.csv  reasignacion_periodo_fiscal.csv  schema.yml  vendedores_agentes.csv  vendedores_comercial.csv
entities/bronze/: bronze_articulos_entity.py  bronze_clientes_entity.py  bronze_codigos_entity.py  bronze_operatividad_entity.py  broze_facturas_entity.py  broze_tranfac_entity.py  broze_vendedores_entity.py
entities/gold/: dim_articulos_entity.py  dim_clientes_entity.py  dim_codigos.py  dim_facturas_entity.py  dim_vendedores_entity.py
etl/load/: db_load.py
etl/transform/: general_functions.py
include/archivos/: codigos_comen3.csv
pipelines/bronze/: bronze_articulos_pipeline.py  bronze_clientes_pipeline.py  (+6 more)
utils/: db_utils.py
(+81 files in other folders)
